[package]
name = "polars-join-repro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.polars]
git = "https://github.com/pola-rs/polars"
features = [ "performant", "lazy", "is_in", "dtype-full", "parquet", "cse", "list" ]